# bot-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: config.example.py  config.py  main.py  middleware.py
src/resources/: constants.py  database.py  exceptions.py  models.py  secrets.py  utils.py
src/routes/binds/: [user_id].py
src/routes/nickname/: parse.py
