[tool.poetry]
name = "bot-api"
version = "0.1.0"
description = ""
authors = ["Bloxlink <admin@blox.link>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "22.6.1"
aiohttp = "3.8.5"
motor = "2.5.1"
hiredis = "^2.2.3"
redis = "~4.2"
requests = "^2.31.0"
websockets = "<11.0"
pymongo = {version = "3.12", extras = ["srv"]}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line_length = "110"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
